--- a/config.json
+++ b/config.json
@@ -44,6 +44,7 @@
             "visual_path": "/data/dataset/AnotherMissOh/AnotherMissOh_Visual.json",
             "data_path": "/data/dataset/AnotherMissOh/AnotherMissOh_QA/AnotherMissOhQA_set_script.jsonl",
             "subtitle_path": "/data/dataset/AnotherMissOh/AnotherMissOh_script.json",
+            "qa_path": "/data/dataset/AnotherMissOh/AnotherMissOh_QA",
             "glove_path": "/data/dataset/AnotherMissOh/glove.6B.300d.txt",
             "vocab_path": "/data/dataset/AnotherMissOh/vocab.pickle",
 
