[feat] bert_score, bleurt impl
bert_score, bleurt impl

--- a/config.json
+++ b/config.json
@@ -97,7 +97,9 @@
         "Bleu",
         "Meteor",
         "Rouge",
-        "Cider"
+        "Cider",
+        "BertScore",
+        "BleuRT"
     ],
     "lr_scheduler": {
         "type": "StepLR",
