[feat] correct vocab path
correct vocab.json, merge.txt path

add preprocessing option

--- a/config.json
+++ b/config.json
@@ -81,7 +81,8 @@
             "is_gpt2": true,
             "video": true,
             "bbfts": true,
-            "meta": false
+            "meta": false,
+            "preprocess_text": false
         }
     },
 
